# sunspots

./: API_SECURITY.md  Dockerfile  GEMINI.md  Makefile  README.md  app.js  index.html  main.py  pyproject.toml  style.css
.github/workflows/temp/: deploy.yml
static/: app.js  style.css
templates/: index.html
