[project]
name = "sunspots"
version = "0.1.0"
description = "AR Sun Tracker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pysolar>=0.11",
    "jinja2>=3.1.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
